--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "/usr/local/bin/nodemon index.js"
+    "start": "/usr/local/bin/nodemon index.js",
+    "lint": "./node_modules/.bin/eslint ."
   },
   "author": "",
   "license": "ISC",
@@ -12,5 +13,10 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "fs": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "eslint": "^4.11.0",
+    "eslint-config-airbnb-base": "^12.1.0",
+    "eslint-plugin-import": "^2.8.0"
   }
 }
