--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "fs": "^0.0.1-security",
+    "morgan": "^1.9.0",
     "sequelize": "^4.22.6"
   },
   "devDependencies": {
