Removed semicolons (to be like the cool kids)

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -4,7 +4,7 @@
       "import/no-unresolved": false,
       "import/no-dynamic-require": false,
       "global-require": 0,
-      "semi": 1,
-      "comma-dangle": 0
+      "comma-dangle": 0,
+      "semi": 0
     }
 }
