--- a/config/db.js.example
+++ b/config/db.js.example
@@ -1,4 +1,4 @@
-const Sequelize = require('sequelize');
+const Sequelize = require('sequelize')
 
 module.exports = {
   development: {
@@ -14,4 +14,4 @@ module.exports = {
     host: '127.0.0.1',
     operatorsAliases: Sequelize.Op
   }
-};
+}
