--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
   "author": "Jon Linnell",
   "license": "ISC",
   "dependencies": {
+    "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "fs": "^0.0.1-security",
+    "joi": "^13.0.1",
     "morgan": "^1.9.0",
     "sequelize": "^4.22.6"
   },
