--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "start": "/usr/local/bin/nodemon index.js",
-    "lint": "./node_modules/.bin/eslint ."
+    "test": "./node_modules/.bin/eslint .",
+    "precommit": "yarn test"
   },
   "author": "Jon Linnell",
   "license": "ISC",
@@ -22,6 +23,7 @@
     "eslint": "^4.11.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "husky": "^0.14.3",
     "sqlite3": "^3.1.13"
   }
 }
