--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -5,6 +5,7 @@
       "import/no-dynamic-require": false,
       "global-require": 0,
       "comma-dangle": 0,
+      "consistent-return": 1,
       "semi": [2, "never"],
       "no-unexpected-multiline": 2
     }
