--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "author": "Jon Linnell",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.2",
     "dotenv": "^4.0.0",
     "express": "^4.16.2",
     "express-fileupload": "^0.3.0",
     "fs": "^0.0.1-security",
     "joi": "^13.0.1",
+    "jsonwebtoken": "^8.1.0",
     "morgan": "^1.9.0",
     "sequelize": "^4.22.6",
     "uuid": "^3.1.0"
